deploy/base/mcp-demo/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: mcp-demo
  labels:
    app.kubernetes.io/component: mcp-demo
spec:
  to:
    kind: Service
    name: mcp-demo
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: None
    termination: edge
